--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
                 width: 50%;
             }
         </style>  
+        <style>
+            .frogpicture {
+                width:80vw;
+                height:80vh;
+                text-align: center;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: auto;
+            }
+        </style> 
         <style type="text/css">
             A:link { COLOR: green; TEXT-DECORATION: green underline; font-weight: normal }
             A:visited { COLOR: purple; TEXT-DECORATION: none; font-weight: normal }
@@ -49,7 +60,7 @@
         <p class="frog">
             <a href="https://www.reddit.com/r/frog/comments/eumdja/soapy_frog/" target="_blank">Where it all started</a>
         </p>
-        <div class = "frog">
+        <div class = "frogpicture">
             <img src="https://preview.redd.it/ch7a4hdmwad41.jpg?auto=webp&s=11c917d46ef431d9c10aa87416ac016a9b7264f7" width="512">
         </div>
         <div class="box">
